Bug 109313 - When inserted with cursor in header, watermark is incorrectly positioned
Summary: When inserted with cursor in header, watermark is incorrectly positioned
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:6.0.0
Keywords: implementationError
Depends on:
Blocks:
 
Reported: 2017-07-24 15:47 UTC by Aron Budea
Modified: 2017-07-28 13:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-07-24 15:47:57 UTC
- In a new document, add a page break.
- On the second page, add header, and while in header do either of the following:
  * add watermark via Format -> Watermark...
  * enable toolbar TSCP Classification, and select Internal Only from Intellectual Property dropdown (this also adds a watermark).

=> On first page the watermark is displaced.
This is similar to bug 108494.

Reproduced using 6.0 master build, 5.4.0.3, 5.2.3.3 / Ubuntu 17.04.
Comment 1 Aron Budea 2017-07-24 16:10:07 UTC
Actually, the bug occurs even if the cursor is close to header, no need to be in header.
Comment 2 Commit Notification 2017-07-28 12:10:25 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cbe551d86ec528533fee04f20c490a96c0ec3d3

tdf#109313 tdf#108494: fix incorrect Watermark position

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2017-07-28 13:26:37 UTC
Fixed now. Thanks, Szymon!