tdf#109313 tdf#108494: fix incorrect Watermark position

Change-Id: I578d89cb732bf3e75b83ee6c65d0320659b5c3f8
Reviewed-on: https://gerrit.libreoffice.org/40514
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
(cherry picked from commit 1cbe551d86ec528533fee04f20c490a96c0ec3d3)